# dekaf2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  bootstrap  cmakeinstall  coding-standards.md  createdbc.cpp  dekaf.cpp  dekaf.h  dekaf2-suite.dockerfile  dekaf2-tools.dockerfile  dekaf2.cpp  dekaf2.dockerfile  dekaf2.h  dekaf2all.h  dekaf2project.cpp  docker-compose.smoketest.yml  genunicodetables.cpp  getentities.cpp  kaddrplus.h  kaes.cpp  kaes.h  kallocator.h  kallocprof.cpp  karia.h  kassociative.h  katomic_object.h  kawsauth.cpp  kawsauth.h  kbar.cpp  kbar.h  kbase64.cpp  kbase64.h  kbasepipe.cpp  kbasepipe.h  kbaseshell.cpp  kbaseshell.h  kbcrypt.cpp  (+391 more)
benchmarks/: CMakeLists.txt  allocation_counter.cpp  allocation_counter.h  benchmark_ranges.json  compare_benchmarks.py  fast_kstring_bench.cpp  kbase64_bench.cpp  kbitfields_bench.cpp  kcasestring_bench.cpp  kfindsetofchars_bench.cpp  khash_bench.cpp  khtml_bench.cpp  khtmlentity_bench.cpp  kmemsearch_bench.cpp  kprops_bench.cpp  kreader_bench.cpp  kreplace_bench.cpp  krow_bench.cpp  ksplit_bench.cpp  kstring_bench.cpp  kstringview_bench.cpp  kthreadpool_bench.cpp  ktime_bench.cpp  kurl_bench.cpp  kurlencode_bench.cpp  kutf8_bench.cpp  kutf_bench.cpp  kwebobjects_bench.cpp  kwriter_bench.cpp  kxml_bench.cpp  main.cpp  mondial-3.0.xml.bz2  other_bench.cpp  restserver.cpp  shared_ptr_bench.cpp  std_string_bench.cpp
benchmarks/textutils/: TextHandlingUtilsDefs.h  UnicodeCharMap.cpp  UnicodeCharMap.h  UnicodeCharMappings.h  UnicodeContainers.h  UnicodeMacros.h  UnicodeStringTypeDefs.h  UnicodeTypeDefs.h  UtfConv.cpp  UtfConv.h
bits/: doxyfile.in  kasio.cpp  kasio.h  kasiostream.h  kbasepipe.cpp  kbasepipe.h  kbaseprocess.cpp  kbaseprocess.h  (+47 more)
from/: CMakeLists.txt
from/folly/: CMakeLists.txt  folly-config.h  folly-gen.sh  folly-patch.diff
from/folly/folly/: Assume.cpp  Bits.h  CppAttributes.h  FBString.h  Malloc.h  Portability.h  Range.h  SharedMutex.h  SparseByteSet.h  folly-config.h
from/folly/folly/concurrency/: CacheLocality.cpp
from/folly/folly/detail/: Futex.cpp  RangeCommon.h  RangeSse42.cpp
from/folly/folly/portability/: Constexpr.h
from/folly/glog/: logging.h
from/google/: diff-speedtest.cpp  diff_match_patch.h
from/hhinnant/date/: date.h  date.h.new  tz.cpp  tz.h  tz_private.h
from/hhinnant/date-old/: date.h
from/nlohmann/: CMakeLists.txt
from/nlohmann/include/nlohmann/: json.hpp
from/nlohmann/include/nlohmann/detail/: macro_scope.hpp  meta.hpp
from/nlohmann/include/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp
from/nlohmann/include/nlohmann/detail/iterators/: iter_impl.hpp  iteration_proxy.hpp
from/nlohmann/include/nlohmann/detail/meta/: type_traits.hpp
from/nlohmann/include/nlohmann/detail/output/: binary_writer.hpp
from/simdutf/: .gitignore  simdutf.cpp  simdutf.h  update.sh
libs/: CMakeLists.txt
libs/croncpp/: CMakeLists.txt
libs/croncpp/catch/: catch.hpp
libs/croncpp/include/: croncpp.h
libs/croncpp/test/: test_oracle.cpp  test_standard.cpp
libs/fcgi/: VERSION
libs/fmt-10.0.0/: CMakeLists.txt
libs/fmt-10.0.0/include/fmt/: core.h  format.h  xchar.h
libs/fmt-11.2.0/: CMakeLists.txt
libs/fmt-12.2.0/: CMakeLists.txt
libs/fmt-3.0.0/doc/bootstrap/: scaffolding.less
libs/fmt-3.0.0/doc/html/: genindex.html  search.html
libs/fmt-8.0.1/include/fmt/: chrono.h
libs/fmt-8.1.1/include/fmt/: chrono.h  format.h
libs/fmt-9.1.0/: CMakeLists.txt
libs/fmt-9.1.0/include/fmt/: format.h
libs/frozen/: CMakeLists.txt
libs/frozen/include/frozen/: CMakeLists.txt
libs/frozen/tests/: catch.hpp
libs/rapidxml-1.13/: rapidxml.hpp  rapidxml_print.hpp
libs/re2/: CMakeLists.txt  Makefile
libs/re2/re2/: prog.cc  re2.cc
libs/uap-cpp/: CMakeLists.txt  UaParser.cpp
libs/uap-cpp/internal/: Pattern.cpp  SnippetIndex.h
libs/uap-cpp/uap-core/: .gitignore  update.sh
samples/: CMakeLists.txt  kgeoip.cpp  kgrep.cpp  kgrep.h  khttp.cpp  koidc_bff.cpp  kreplace.cpp  kreplace.h  krypt.cpp  ksql.cpp  ksql.h  kssod.cpp  kssod_store.cpp  kssod_store.h  kssod_ui.cpp  kssod_ui.h  ktunnel.cpp  ktunnel.h  ktunnel_admin.cpp  ktunnel_admin.h  ktunnel_store.cpp  ktunnel_store.h  kurl.cpp  kurl.h  makefile  restserver.cpp  statinfo-dekaf1.cpp  statinfo.cpp
samples/mong2sql/: .gitignore  CMakeLists.txt  extract_test_data.py  mong2sql.cpp  mong2sql.h  site.json  sites.json  test_child_ids.json  test_complex.json  test_compound.json  test_input.json  test_long_names.json  test_mongo_ids.json  test_naming.json  test_nan_values.json  test_nested_arrays.json  test_permission.json  test_plurals.json  test_services.json  test_types.json  test_unicode.json
samples/mong2sql/cmake/: mong2sql-config.cmake.in
smoketests/: CMakeLists.txt  catch.hpp  kcurl_smoketests.cpp  khttp2_smoketests.cpp  khttp3_smoketests.cpp  khttpclient_smoketests.cpp  kinshell_smoketests.cpp  kresolve_smoketests.cpp  ksql_smoketests.cpp  ksslstream_smoketests.cpp  ksystem_smoketests.cpp  ktlsstream_smoketests.cpp  kwebio_smoketests.cpp  main.cpp
templates/dbrestserver/: .gitignore  ApiVersion.cpp  CMakeLists.txt  __LowerProjectName__.cpp  __LowerProjectName__.h  db.cpp  db.h  main.cpp  main.h  manifest.xml
templates/dbrestserver/schema/: __LowerProjectName__-100.ksql
utests/: CMakeLists.txt  benchmarks.cpp  catch.hpp  features_tests.cpp  kaes_tests.cpp  kallocator_tests.cpp  karenaallocator_tests.cpp  kassociative_tests.cpp  kawsauth_tests.cpp  kbase64_tests.cpp  kbcrypt_tests.cpp  kbit_tests.cpp  kbitfields_tests.cpp  kblockcipher_tests.cpp  kcache_tests.cpp  kcaseless_tests.cpp  kcasestring_tests.cpp  kchildprocess_tests.cpp  kchunkedtransfer_tests.cpp  kcompatibility_tests.cpp  kcompression_tests.cpp  kconfig_tests.cpp  kconnectionlimiter_tests.cpp  kcookie_tests.cpp  kcountingstreambuf_tests.cpp  kcppcompat_tests.cpp  kcrc_tests.cpp  kcron_tests.cpp  kcsv_tests.cpp  kctype_tests.cpp  kcurl_tests.cpp  kdate_tests.cpp  kdiff_tests.cpp  kdiffer_tests.cpp  kduration_tests.cpp  keckey_tests.cpp  ked25519sign_tests.cpp  kencode_tests.cpp  keraseremove_tests.cpp  kfile_tests.cpp  (+139 more)
(+877 files in other folders)
